--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td> <img src="/img/2.jpg" alt="Mayank's profile photo" height="300" ></td>
+        <td> <img src="mayank.jpg" alt="Mayank's profile photo" height="300" ></td>
         <td> <h1>Mayank Kumar Ratre</h1>
           <p> <em> The Buisness Typhoon and <strong> The Richest Man In The Universe</strong></em></p></td>
       </tr>
