--- a/index.html
+++ b/index.html
@@ -3,48 +3,45 @@
   <head>
     <meta charset="utf-8" />
     <title>Mayank's Personal Page</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <table cellspacing="20">
       <tr>
-        <td> <img src="mayank.jpg" alt="Mayank's profile photo" height="300" ></td>
+        <td> <img src="mayank.png" alt="Mayank's profile photo" height="300" ></td>
         <td> <h1>Mayank Kumar Ratre</h1>
-          <p> <em> The Buisness Typhoon and <strong> The Richest Man In The Universe</strong></em></p></td>
+          <p> <em>  BLOGGER and  <strong> FRONT-END Developer </strong></em></p></td>
+        <td><p>When you start reading this para its not obvious that, you came through someones post just stuck for some minutes
+          . Here I am working with full passion and started my new journey. As you finding someone for your work, I too searching for 
+          New exciting projects to express my thoughts. So why are you waiting for Lets Give each other a chance.
+        </p></td>
       </tr>
     </table>
     <br><hr>
-    <h3><u>Education</u></h3>
-    <ul>
-    <li><b>Schooling:-</b> Jawahar Navodaya Vidyalaya, Mana Camp Raipur Chhattisgarh</li>
-    <li><b>Coahing:-</b> Dakshana (Pune Valley)</li>
-    <li><b>College:-</b> National Institute Of Technology, Raipur</li>
-    </ul>
     <hr>
     <h3><u>Hobbies</u></h3>
     <ol>
       <li>Programming </li>
       <li>Learning New Every Time</li>
-      <li>Making Money</li>
+      <li>Interest in BUISNESS</li>
     </ol>
     <hr>
     <h3>SKILLS</h3>
     <table  cellspacing="10" >
         <tr>
-          <td>BUISNESS MAN</td>
-          <td> ⭐⭐⭐⭐⭐ </td>
+          <td>FRONT-END Developer</td>
           <td>Software Engineer</td> 
-          <td>⭐⭐⭐⭐⭐</td>
         </tr>
         <tr>
-          <td>Web Developer</td>
-          <td>⭐⭐⭐⭐⭐</td>
-          <td>Android Developer</td>
-          <td>⭐⭐⭐⭐⭐</td>
+          <td>Teaching- (Programming)</td>
+          <td>Competetive Coder</td>
         </tr>
     </table>
     <h4>Lets Meet</h4>
     <a href="inputs.html">Make a appointment</a>
     <hr>
     <a href="contacts.html">contacts</a>
+    <li>Mobile No.- 7828456628</li>
+    <li>Email ID- mayankratre10@gmail.com</li>
   </body>
 </html>
